# mephala

./: .env-conf  .gitignore  README.md  agent.py  candidate_finder.py  common.py  context.py  enums.py  exceptions.py  hunk.py  main.py  mypy.ini  package_manager.py  patch_manager.py  pyproject.toml  pytest.ini  tox.ini
docs/dev/: interaction_units.md
mephala.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mephala/ai/: agent.py  backporter.py  types.py
mephala/cli/: app.py  auto_wizard.py  utils.py  wizard.py
mephala/core/: exceptions.py  iu.py
mephala/core/config/: context_manager.py
mephala/core/diff/: hunk.py  patch.py
mephala/core/models/: __init__.py  action.py  candidate.py  cve_record.py  diff_line.py  enums.py  patch_meta.py  pattern.py
mephala/core/services/: candidate_finder.py  package_manager.py  patch_manager.py
mephala/core/utils/: logging.py  patch_checks.py
tests/: conftest.py
tests/ai/: test_agent.py
tests/cli/: test_finalize_patch.py
tests/core/: test_candidate_finder.py  test_generate_actions.py  test_hunk.py  test_normalize_threads.py  test_validators.py  test_weave.py
tests/data/: sample.patch
